--- a/H_WorkTools/MainWindow.xaml
+++ b/H_WorkTools/MainWindow.xaml
@@ -22,50 +22,7 @@
                     </TabItem.Header>
                     <StackPanel Margin="12">
                         <TextBlock Margin="0,0,0,8" Style="{StaticResource MaterialDesignHeadline5TextBlock}" Text="截图、录屏" />
-                        <GroupBox Header="截图快捷键" >
-                            <Grid >
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="100"/>
-                                    <ColumnDefinition Width="60"/>
-                                    <ColumnDefinition Width="60"/>
-                                    <ColumnDefinition Width="60"/>
-                                    <ColumnDefinition Width="60"/>
-                                </Grid.ColumnDefinitions>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
-                                    <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
-                                    <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
-                                    <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
-                                    <RowDefinition FrameworkElement.FlowDirection="RightToLeft" Height="35"></RowDefinition>
-                                    <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
-                                    <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
-                                </Grid.RowDefinitions>
-                                <!--全屏截图-->
-                                <Label Grid.Row="0" Grid.Column="0" Content="全屏截图" />
-                                <CheckBox Grid.Row="0" Grid.Column="1" IsChecked="False" Content="Ctrl" Style="{StaticResource MaterialDesignLightCheckBox}" />
-                                <CheckBox Grid.Row="0" Grid.Column="2" IsChecked="True" Content="Alt" Style="{StaticResource MaterialDesignLightCheckBox}" />
-                                <CheckBox Grid.Row="0" Grid.Column="3" IsChecked="True" Content="Shift" Style="{StaticResource MaterialDesignLightCheckBox}" />
-                                <TextBox Grid.Row="0" Grid.Column="4" x:Name="PhoneTextBox1" materialDesign:HintAssist.Hint="Key" Text="A"/>
-                                <!--截图-->
-                                <Label Grid.Row="1" Grid.Column="0" Content="截图" />
-                                <CheckBox Grid.Row="1" Grid.Column="1" IsChecked="False" Content="Ctrl" Style="{StaticResource MaterialDesignLightCheckBox}" />
-                                <CheckBox Grid.Row="1" Grid.Column="2" IsChecked="True" Content="Alt" Style="{StaticResource MaterialDesignLightCheckBox}" />
-                                <CheckBox Grid.Row="1" Grid.Column="3" IsChecked="True" Content="Shift" Style="{StaticResource MaterialDesignLightCheckBox}" />
-                                <TextBox Grid.Row="1" Grid.Column="4" x:Name="PhoneTextBox" materialDesign:HintAssist.Hint="Key" Text="S"/>                                
-                                <!--截图对比-->
-                                <Label Grid.Row="2" Grid.Column="0" Content="截图对比" />
-                                <CheckBox Grid.Row="2" Grid.Column="1" IsChecked="False" Content="Ctrl" Style="{StaticResource MaterialDesignLightCheckBox}" />
-                                <CheckBox Grid.Row="2" Grid.Column="2" IsChecked="True" Content="Alt" Style="{StaticResource MaterialDesignLightCheckBox}" />
-                                <CheckBox Grid.Row="2" Grid.Column="3" IsChecked="True" Content="Shift" Style="{StaticResource MaterialDesignLightCheckBox}" />
-                                <TextBox Grid.Row="2" Grid.Column="4" x:Name="PhoneTextBox2" materialDesign:HintAssist.Hint="Key" Text="D"/>
-                                <Label Grid.Row="3" Grid.Column="0" Content="对比窗体标题" />
-                                <TextBox Grid.Row="3" Grid.Column="1"  Grid.ColumnSpan="4" x:Name="PhoneTextBo1x" materialDesign:HintAssist.Hint="Key" Text="A"/>
-                                <Label Grid.Row="4" Grid.Column="0" Content="透明度" />
-                                <Slider Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="4" Value="40" Minimum="30" Maximum="100" Style="{StaticResource MaterialDesignDiscreteSlider}" TickFrequency="{Binding DiscreteHorizontal.TickFrequency}" TickPlacement="BottomRight" />
-                                <Button Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Click="ScreenCapture_Click" Height="Auto" Content="{DynamicResource btn_SetLanguage_label}" FontSize="14" Cursor="Hand"/>
-                                <TextBlock  Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="5" TextWrapping="Wrap" Margin="0,10,0,0">quiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</TextBlock>
-                            </Grid>
-                        </GroupBox>
+
                         <GroupBox Header="录屏快捷键" Margin="0,12,0,0">
                             <Grid >
                                 <Grid.ColumnDefinitions>
@@ -94,7 +51,6 @@
                                 <Button Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="1" x:Name="Btn_ScreenRecording_Start" Click="ScreenRecording_Start_Click" IsEnabled="{Binding ScreenRecording_Start_Enabled}" Content="{materialDesign:PackIcon VideoBox,Size=20}" ToolTip="开始" Margin="10,0,0,0"/>
                                 <Button Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="1" x:Name="Btn_ScreenRecording_Pause" Click="ScreenRecording_Pause_Click" IsEnabled="{Binding ScreenRecording_Pause_Enabled}" Content="{materialDesign:PackIcon PlayPause,Size=20}" ToolTip="暂停" Margin="10,0,0,0"/>
                                 <Button Grid.Row="2" Grid.Column="5" Grid.ColumnSpan="1" x:Name="Btn_ScreenRecording_Stop" Click="ScreenRecording_Stop_Click"  IsEnabled="{Binding ScreenRecording_Stop_Enabled}" Content="{materialDesign:PackIcon Stop,Size=20}" ToolTip="停止" Margin="10,0,0,0"/>
-                                <TextBlock  Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="5" TextWrapping="Wrap" Margin="0,10,0,0">quiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</TextBlock>
                             </Grid>
                         </GroupBox>
                     </StackPanel>
@@ -219,29 +175,74 @@
                     </TabItem.Header>
                     <StackPanel Margin="12">
                         <TextBlock Margin="0,0,0,8" Style="{StaticResource MaterialDesignHeadline5TextBlock}" Text="{DynamicResource btn_Language}" />
-                        <Grid >
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition/>
-                                <ColumnDefinition/>
-                                <ColumnDefinition/>
-                                <ColumnDefinition/>
-                                <ColumnDefinition/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
-                                <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
-                                <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
-                                <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
-                            </Grid.RowDefinitions>
-                            <Label Grid.Row="0" Grid.Column="0" Content="{DynamicResource btn_Language_label}" Grid.ColumnSpan="2" />
-                            <ComboBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="4" x:Name="cbLanguage" DisplayMemberPath="title" SelectedValuePath="id" IsEnabled="{Binding Path=IsChecked, ElementName=FilledComboBoxEnabledCheckBox}" materialDesign:HintAssist.Hint="Language"/>
-                            <Label Grid.Row="1" Grid.Column="0" Content="剪贴板密码" Grid.ColumnSpan="2" Margin="0,15,0,0"/>
-                            <TextBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" x:Name="txtClipboardPassword" Margin="0,15,0,0" MaxLength="32" materialDesign:HintAssist.Hint="Password"></TextBox>
-                            <Label Grid.Row="2" Grid.Column="0" Content="开机启动" Grid.ColumnSpan="2" Margin="0,15,0,0"/>
-                            <RadioButton Grid.Row="2" Grid.Column="1" x:Name="rbStart1" Content="是" Style="{StaticResource MaterialDesignRadioButton}" IsChecked="True" Margin="0,10,0,0"/>
-                            <RadioButton Grid.Row="2" Grid.Column="3" x:Name="rbStart2" Content="否" Style="{StaticResource MaterialDesignRadioButton}" Margin="0,10,0,0"/>
-                            <Button Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Height="Auto" Content="{DynamicResource btn_SetLanguage_label}" FontSize="14" Click="SetLanguage_Click" Cursor="Hand" Margin="0,10,0,-10"/>
-                        </Grid>
+                        <GroupBox Header="系统设置" Margin="0,0,0,8">
+                            <Grid >
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
+                                    <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
+                                    <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
+                                    <RowDefinition FrameworkElement.FlowDirection="RightToLeft" Height="50"></RowDefinition>
+                                </Grid.RowDefinitions>
+                                <Label Grid.Row="0" Grid.Column="0" Content="{DynamicResource btn_Language_label}" Grid.ColumnSpan="2" />
+                                <ComboBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="4" x:Name="cbLanguage" DisplayMemberPath="title" SelectedValuePath="id" IsEnabled="{Binding Path=IsChecked, ElementName=FilledComboBoxEnabledCheckBox}" materialDesign:HintAssist.Hint="Language"/>
+                                <Label Grid.Row="1" Grid.Column="0" Content="剪贴板密码" Grid.ColumnSpan="2" Margin="0,15,0,0"/>
+                                <TextBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" x:Name="txtClipboardPassword" Margin="0,15,0,0" MaxLength="32" materialDesign:HintAssist.Hint="Password"></TextBox>
+                                <Label Grid.Row="2" Grid.Column="0" Content="开机启动" Grid.ColumnSpan="2" Margin="0,15,0,0"/>
+                                <RadioButton Grid.Row="2" Grid.Column="1" x:Name="rbStart1" Content="是" Style="{StaticResource MaterialDesignRadioButton}" IsChecked="True" Margin="0,10,0,0"/>
+                                <RadioButton Grid.Row="2" Grid.Column="3" x:Name="rbStart2" Content="否" Style="{StaticResource MaterialDesignRadioButton}" Margin="0,10,0,0"/>
+                                <Button Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Height="Auto" Content="{DynamicResource btn_SetLanguage_label}" FontSize="14" Click="SetLanguage_Click" Cursor="Hand" Margin="0,10,0,-10"/>
+                            </Grid>
+                        </GroupBox>
+                        <GroupBox Header="截图快捷键" >
+                            <Grid >
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="100"/>
+                                    <ColumnDefinition Width="60"/>
+                                    <ColumnDefinition Width="60"/>
+                                    <ColumnDefinition Width="60"/>
+                                    <ColumnDefinition Width="60"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
+                                    <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
+                                    <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
+                                    <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
+                                    <RowDefinition FrameworkElement.FlowDirection="RightToLeft" Height="35"></RowDefinition>
+                                    <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
+                                    <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
+                                </Grid.RowDefinitions>
+                                <!--全屏截图-->
+                                <Label Grid.Row="0" Grid.Column="0" Content="全屏截图" />
+                                <CheckBox Grid.Row="0" Grid.Column="1" IsChecked="False" Content="Ctrl" Style="{StaticResource MaterialDesignLightCheckBox}" />
+                                <CheckBox Grid.Row="0" Grid.Column="2" IsChecked="True" Content="Alt" Style="{StaticResource MaterialDesignLightCheckBox}" />
+                                <CheckBox Grid.Row="0" Grid.Column="3" IsChecked="True" Content="Shift" Style="{StaticResource MaterialDesignLightCheckBox}" />
+                                <TextBox Grid.Row="0" Grid.Column="4" x:Name="PhoneTextBox1" materialDesign:HintAssist.Hint="Key" Text="A"/>
+                                <!--截图-->
+                                <Label Grid.Row="1" Grid.Column="0" Content="截图" />
+                                <CheckBox Grid.Row="1" Grid.Column="1" IsChecked="False" Content="Ctrl" Style="{StaticResource MaterialDesignLightCheckBox}" />
+                                <CheckBox Grid.Row="1" Grid.Column="2" IsChecked="True" Content="Alt" Style="{StaticResource MaterialDesignLightCheckBox}" />
+                                <CheckBox Grid.Row="1" Grid.Column="3" IsChecked="True" Content="Shift" Style="{StaticResource MaterialDesignLightCheckBox}" />
+                                <TextBox Grid.Row="1" Grid.Column="4" x:Name="PhoneTextBox" materialDesign:HintAssist.Hint="Key" Text="S"/>
+                                <!--截图对比-->
+                                <Label Grid.Row="2" Grid.Column="0" Content="截图对比" />
+                                <CheckBox Grid.Row="2" Grid.Column="1" IsChecked="False" Content="Ctrl" Style="{StaticResource MaterialDesignLightCheckBox}" />
+                                <CheckBox Grid.Row="2" Grid.Column="2" IsChecked="True" Content="Alt" Style="{StaticResource MaterialDesignLightCheckBox}" />
+                                <CheckBox Grid.Row="2" Grid.Column="3" IsChecked="True" Content="Shift" Style="{StaticResource MaterialDesignLightCheckBox}" />
+                                <TextBox Grid.Row="2" Grid.Column="4" x:Name="PhoneTextBox2" materialDesign:HintAssist.Hint="Key" Text="D"/>
+                                <Label Grid.Row="3" Grid.Column="0" Content="对比窗体标题" />
+                                <TextBox Grid.Row="3" Grid.Column="1"  Grid.ColumnSpan="4" x:Name="PhoneTextBo1x" materialDesign:HintAssist.Hint="Key" Text="A"/>
+                                <Label Grid.Row="4" Grid.Column="0" Content="透明度" />
+                                <Slider Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="4" Value="40" Minimum="30" Maximum="100" Style="{StaticResource MaterialDesignDiscreteSlider}" TickFrequency="{Binding DiscreteHorizontal.TickFrequency}" TickPlacement="BottomRight" />
+                                <Button Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Click="ScreenCapture_Click" Height="Auto" Content="{DynamicResource btn_SetLanguage_label}" FontSize="14" Cursor="Hand"/>
+                            </Grid>
+                        </GroupBox>
                     </StackPanel>
                 </TabItem>
                 <!--语言设置-结束-->
